# zephyr

./: .gitlab-ci.yml  .travis.yml  CODEOWNERS  Dockerfile  README.rst  ci-build-and-copy.sh  debian-arm-setup.sh  env.sh  ubuntu-arm-setup.sh  west.yml  zephyr-env.sh
.ci/scripts/: build-and-install-dtc.sh  checkout-modules.py  install-cmake.sh  install-gnuarmemb.sh
boards/arm/beagle_bcf/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  beagle_freedom.dts  beagleconnect_freedom.dts  beagleconnect_freedom_c5.conf  beagleconnect_freedom_c5.overlay  beagleconnect_freedom_defconfig  board.cmake  board_antenna.c  board_uartpinmux.c
boards/arm/beagle_bcf/doc/: index.rst
doc/releases/: release-notes-3.7.rst
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ads1115  adc_ads1115.c  adc_shell.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.cc13xx_cc26xx  Kconfig.cc32xx  Kconfig.emul  Kconfig.eos_s3  Kconfig.litex  Kconfig.mcux  Kconfig.nrfx  Kconfig.posix  Kconfig.sifive  Kconfig.sim  gpio_cc13xx_cc26xx.c  gpio_cc32xx.c  gpio_emul.c  gpio_eos_s3.c  gpio_handlers.c  gpio_litex.c  gpio_mcux.c  gpio_nrfx.c  gpio_posix.c  gpio_sifive.c  gpio_sim.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.sim  i2c_cc13xx_cc26xx.c  i2c_sim.c  i2c_ts5a2066.c
drivers/ieee802154/: CMakeLists.txt  Kconfig.cc13xx_cc26xx  ieee802154_cc13xx_cc26xx.c  ieee802154_cc13xx_cc26xx.h  ieee802154_cc13xx_cc26xx_subg.c  ieee802154_cc13xx_cc26xx_subg.h
drivers/sensor/: Kconfig  (+1 more)
include/: kernel.h  list.h
kernel/: device.c  init.c  mempool.c  thread.c  userspace.c
subsys/: CMakeLists.txt  Kconfig
(+223 files in other folders)
